# mlb-watchability

./: .gitignore  CLAUDE.md  README.md  copy-md-to-blog.sh  pyproject.toml  run-all-checks.sh  test_mlb_statsapi.py  test_pitcher_data_detailed.py  test_team_data_and_nerd.py  test_team_data_detailed.py  test_team_nerd_calculation.py  test_team_nerd_fixed.py  todo.md
.github/workflows/: ci.yml  daily-markdown.yml
analysis/: README.md  claude_api.py  debug_name_mismatch.py  generate_game_prompt.py  historical_nerd_scores.csv  historical_nerd_scores_initial_claude_transcript.txt  historical_score_analysis.py  pitcher_nerd_breakdown.py  pitcher_pnerd_analysis.py  pnerd_analysis_seven_days.py  show_fangraphs_urls.py  team_nerd_breakdown.py  test_fangraphs_team_data.py  test_fg_player_lookup.py  test_fuzzy_matching.py  test_mlb_statsapi.py  test_mlbam_reverse_lookup.py  test_openai_responses_api.py  test_pb_pitching_error.py  test_pitcher_data_detailed.py  test_pitcher_ids.py  test_pitching_stats_2026.py  test_pnerd_scores.py  test_team_batting.py  test_team_data_and_nerd.py  test_team_data_detailed.py  test_team_pitching.py  tnerd_analysis.py
claude-logs/: 2025.07.03.txt
data/: broadcasters.radio.2025.csv  broadcasters.tv.2025.csv  name-mapping.csv  payroll-spotrac.2025.csv  payroll-spotrac.2026.csv
specs/: architecture-gen-prompt.md  architecture.md  architecture_o3.md  new-season-notes.md  score_updates.md  vision-and-reqs.md
specs/source-archive/: todolist-gen-prompt.md
src/mlb_watchability/: __init__.py  cli.py  data_retrieval.py  game_scores.py  llm_client.py  markdown_cli.py  markdown_generator.py  pitcher_stats.py  prompt-game-summary-system.md  prompt-game-summary-template.md  prompt-game-summary.md  prompt_cli.py  team_mappings.py  team_stats.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_markdown.py  test_costly_example.py  test_data_retrieval.py  test_game_scores.py  test_llm_client.py  test_llm_model_cli.py  test_markdown_cli_integration.py  test_markdown_generator.py  test_nerd_calculations_exception_handling.py  test_pitcher_stats.py  test_prompt_cli.py  test_team_mappings.py  test_team_stats.py  test_time_formatting.py  test_utils.py
